- Added Beach Villager Type (module)