@@ -1,1 +1,4 @@
 - Added Beach Villager Type (module)
+- Cleaned up FoxHound model and fixed some visual inconsistencies with it (such as baby model being offset)
+- Magnets not have shiny new particles
+- Magnets can now push and pull blocks through breakable blocks (like tall grass)
